--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "laravel-mix": "^1.0",
     "lodash": "^4.17.4",
     "vue": "^2.1.10",
-    "font-awesome": "^4.7.0",
-    "animate.css": "^3.6.1"
+    "font-awesome": "^4.7.0"
   }
 }
