--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/css/AdminLTE.css": "/css/AdminLTE.css",
-    "/js/admin/dashboard.js": "/js/admin/dashboard.js",
-    "/js/bundleLTE.js": "/js/bundleLTE.js",
-    "/css/libs/animate.css": "/css/libs/animate.css"
+    "/css/app.css": "/css/app.css"
 }
