--- a/.env
+++ b/.env
@@ -3,14 +3,14 @@ APP_ENV=local
 APP_KEY=base64:SDjlnpkdG3gQe6epwaFx/jb/gdzn60wFblq7t7c6U8k=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://vinusacoin.local/
 
 DB_CONNECTION=mysql
-DB_HOST=vinusacoin.co.uk
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=vinusa
-DB_USERNAME=vinusa
-DB_PASSWORD=suksesico2018
+DB_DATABASE=db_vinusacoin
+DB_USERNAME=root
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -22,10 +22,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=mail.vinusacoin.co.uk
+MAIL_PORT=587
+MAIL_USERNAME=support@vinusacoin.co.uk
+MAIL_PASSWORD=passwordSupport!212
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
