--- a/.example.env
+++ b/.example.env
@@ -8,9 +8,9 @@ APP_URL=http://vinusacoin.local/
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=vinusa
-DB_USERNAME=root
-DB_PASSWORD=dprpd0810
+DB_DATABASE=databasename
+DB_USERNAME=uname
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -22,11 +22,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mail.vinusacoin.co.uk
-MAIL_PORT=587
-MAIL_USERNAME=support@vinusacoin.co.uk
-MAIL_PASSWORD=passwordSupport!212
-MAIL_ENCRYPTION=null
+MAIL_HOST=mailhost
+MAIL_PORT=port
+MAIL_USERNAME=email_address
+MAIL_PASSWORD=password_email
+MAIL_ENCRYPTION=encryption
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
