--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,12 +1,9 @@
 {
     "/js/app.js": "/js/app.js",
-<<<<<<< HEAD
+    "/css/app.css": "/css/app.css",
     "/css/AdminLTE.css": "/css/AdminLTE.css",
     "/css/libs/flag-icon-css.css": "/css/libs/flag-icon-css.css",
-=======
->>>>>>> f3437afb061fae3f49a7e5b54ecbcd22d42d8869
     "/js/admin/dashboard.js": "/js/admin/dashboard.js",
     "/js/bundleLTE.js": "/js/bundleLTE.js",
-    "/css/libs/animate.css": "/css/libs/animate.css",
-    "/css/app.css": "/css/app.css"
+    "/css/libs/animate.css": "/css/libs/animate.css"
 }
