--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": ["app/Helpers.php"]
     },
     "autoload-dev": {
         "psr-4": {
