--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,7 +3,8 @@
     "/css/app.css": "/css/app.css",
     "/css/AdminLTE.css": "/css/AdminLTE.css",
     "/css/libs/flag-icon-css.css": "/css/libs/flag-icon-css.css",
-    "/js/admin/dashboard.js": "/js/admin/dashboard.js",
     "/js/bundleLTE.js": "/js/bundleLTE.js",
+    "/js/vendor.js": "/js/vendor.js",
+    "/js/page/home.js": "/js/page/home.js",
     "/css/libs/animate.css": "/css/libs/animate.css"
 }
