--- a/.env.example
+++ b/.env.example
@@ -32,7 +32,7 @@ MAIL_ENCRYPTION=tls
 
 MAIL_FROM_ADDRESS=support@vinusacoin.co.uk
 MAIL_FROM_NAME="VNS SUPPORT SYSTEM"
-EMAIL_ADMIN=azharridho42@gmail.com
+EMAIL_ADMIN=support@vinusacoin.co.uk
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
